# PyNczyk

./: README.md  pyproject.toml
pynczyk/: __init__.py  config.py  main.py  pynczyk.py
pynczyk/client/: client.py  main.py
pynczyk/core/: __init__.py
