[tool.poetry]
name = "pynczyk"
version = "0.1.0"
description = ""
authors = ["Cannafox <deuterpl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.scripts]
pynczyk-client = "pynczyk.main:run_client"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
